--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
