--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.23.6",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.525.0",
     "match-sorter": "^8.0.3",
     "motion": "^12.23.6",
     "react": "^19.1.0",
